fix image stretch

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -285,6 +285,7 @@ footer section svg {
   height: 110px;
   border-radius: 100px;
   margin: 20px 0px;
+  object-fit: cover;
 }
 
 .card div:last-child {
